2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Apparently AC_CONFIG_MACRO_DIR breaks when using more
	than one macro directory, reverting last change.

2008-12-04  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Set AC_CONFIG_MACRO_DIR to common/m4 to point autoconf to
	our M4 macros.

2008-11-29  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Cygwin Ports maintainer
	          <yselkowitz at users dot sourceforge dot net>

	* autogen.sh:
	* configure.ac:
	Require gettext 0.17 because older versions don't mix with libtool
	2.2. At build time an older gettext version will still work.
	Fixes bug #556091.

2008-11-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: 이문형 <iwings at gmail dot com>

	* gst/gstpoll.c: (gst_poll_fd_ctl_write), (gst_poll_fd_has_error):
	Adds support for FD_CONNECT event (win32). See #562258.

2008-11-24  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/base/gstbasesink.c:
	  Turn comment into gtk-doc comment.

2008-11-24  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_acceptcaps):
	Revert quick accepcaps attempt, it's not fully equivalent to the old
	behaviour and thus causes regressions.

2008-11-24  Edward Hervey  <edward.hervey@collabora.co.uk>

	* plugins/elements/gstfilesrc.c: (gst_file_src_uri_set_uri):
	Fix memory leak.

2008-11-24  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Simon Holm Thøgersen <odie at cs dot aau dot dk>

	* gst/gstregistry.c: (gst_registry_scan_path_level):
	Reduce the number of stat() calls for every file from three times
	to one time. Fixes bug #560360.

2008-11-22  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_acceptcaps):
	Rename a variable to make the code clearer.

2008-11-21  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/gstidentity.c: